--- a/Predicting-Credit-Card-Approvals.ipynb
+++ b/Predicting-Credit-Card-Approvals.ipynb
@@ -5,7 +5,7 @@
    "id": "c9680073",
    "metadata": {},
    "source": [
-    "## Credit card applications\n",
+    "# Credit card applications\n",
     "<p>Commercial banks receive <em>a lot</em> of applications for credit cards. Many of them get rejected for many reasons, like high loan balances, low income levels, or too many inquiries on an individual's credit report, for example. Manually analyzing these applications is error-prone, and time-consuming. Luckily, this task can be automated with the power of machine learning and pretty much every commercial bank does so nowadays. We have developed an automatic credit card approval predictor using machine learning techniques, just like the real banks do.</p>\n",
     "<p><img src=\"https://source.unsplash.com/RJQE64NmC_o\" alt=\"Credit card being held in hand\"></p>\n",
     "<p>We have used the <a href=\"http://archive.ics.uci.edu/ml/datasets/credit+approval\">Credit Card Approval dataset</a> from the UCI Machine Learning Repository.</p>"
